--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <meta name="author" content="Steps Keita" />
     <meta property="og:title" content="Fa2Bee" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="img/logo.png" />
     <meta property="og:url" content="" />
     <meta property="og:description" content="Fa2Bee Inc." />
     <meta property="og:locale" content="en_US" />
