--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,10 @@
     <meta property="og:title" content="Fa2Bee" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="img/logo.png" />
-    <meta property="og:url" content="" />
+    <meta
+      property="og:url"
+      content="https://peaceful-muffin-848fc4.netlify.app/"
+    />
     <meta property="og:description" content="Fa2Bee Inc." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Fa2Bee" />
