--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <!-- Default Theme -->
     <link rel="stylesheet" href="owl-carousel/owl.theme.default.min.css" />
 
-    <link href="/dist/style.css" rel="stylesheet" />
+    <link href="../dist/style.css" rel="stylesheet" />
 
     <title>Fa2Bee</title>
     <meta name="description" content="Fa2Bee Inc." />
