--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
 
     <!-- Default Theme -->
     <link rel="stylesheet" href="owl-carousel/owl.theme.default.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css"
+    />
+    <script src="https://cdn.tailwindcss.com/3.3.0"></script>
 
     <link href="../dist/style.css" rel="stylesheet" />
 
@@ -291,10 +296,10 @@
       </div>
     </div>
 
-    <script
+    <!-- <script
       type="text/javascript"
       src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
-    ></script>
+    ></script> -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="owl-carousel/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
