--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,7 @@
       href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css"
     />
     <script src="https://cdn.tailwindcss.com/3.3.0"></script>
-
-    <link href="../dist/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
 
     <title>Fa2Bee</title>
     <meta name="description" content="Fa2Bee Inc." />
