--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css"
     />
-    <script src="https://cdn.tailwindcss.com/3.3.0"></script>
     <link href="style.css" rel="stylesheet" />
 
     <title>Fa2Bee</title>
@@ -294,7 +293,7 @@
         </div>
       </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
     <!-- <script
       type="text/javascript"
       src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
