banners changed and we banner added

--- a/src/index.html
+++ b/src/index.html
@@ -100,14 +100,18 @@
           data-te-carousel-active
           class="w-3 h-3 my-1 rounded-full border border-white bg-beeYellow bg-clip-padding p-0 -indent-[999px] opacity-50 transition-opacity duration-[600ms] ease-[cubic-bezier(0.25,0.1,0.25,1.0)] motion-reduce:transition-none"
           aria-current="true"
-          aria-label="Slide 1"
         ></button>
         <button
           type="button"
           data-te-target="#showcase"
           data-te-slide-to="1"
           class="w-3 h-3 my-1 rounded-full border border-white bg-beeYellow bg-clip-padding p-0 -indent-[999px] opacity-50 transition-opacity duration-[600ms] ease-[cubic-bezier(0.25,0.1,0.25,1.0)] motion-reduce:transition-none"
-          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-te-target="#showcase"
+          data-te-slide-to="2"
+          class="w-3 h-3 my-1 rounded-full border border-white bg-beeYellow bg-clip-padding p-0 -indent-[999px] opacity-50 transition-opacity duration-[600ms] ease-[cubic-bezier(0.25,0.1,0.25,1.0)] motion-reduce:transition-none"
         ></button>
       </div>
 
@@ -123,7 +127,7 @@
           style="backface-visibility: hidden"
         >
           <img
-            src="img/laundry/riahbee_home1.webp"
+            src="img/banner/fa2bee.png"
             class="block w-full h-full object-cover transition-transform duration-300 scale-x-100 scale-y-110"
             alt=""
           />
@@ -168,7 +172,7 @@
           style="backface-visibility: hidden"
         >
           <img
-            src="img/laundry/riahBee_8.png"
+            src="img/banner/riahbee_home1.webp"
             class="block w-full h-full object-cover transition-transform duration-300 scale-x-100 scale-y-110"
             alt=""
           />
@@ -182,7 +186,7 @@
                 data-wow-duration="5s"
                 data-wow-delay="3s"
               >
-                <span class="font-thin text-beeYellow mx-2">RIAHBEE</span>
+                <span class="font-thin text-beeYellow mx-2">Fa2Bee</span>
                 <span class="font-extrabold mx-2">Laundry</span>
               </h2>
               <div
@@ -192,6 +196,51 @@
               >
                 <div class="w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
                 <p>We do commercial laundry for all</p>
+                <div class="w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
+              </div>
+              <a
+                href=""
+                class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 mx-auto bg-beeYellow text-customBlack py-3 px-7 animate__animated animate__slideInUp"
+                data-wow-duration="7s"
+                data-wow-delay="5s"
+              >
+                More Details
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <!-- thrid item -->
+        <div
+          class="relative float-left -mr-[100%] hidden w-full h-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
+          data-te-carousel-item
+          style="backface-visibility: hidden"
+        >
+          <img
+            src="img/banner/cleaning.png"
+            class="block w-full h-full object-cover transition-transform duration-300 scale-x-100 scale-y-110"
+            alt=""
+          />
+          <!-- overlay -->
+          <div
+            class="absolute top-0 left-0 w-full h-full bg-customDark/70 z-30 flex items-center justify-center p-10 text-white"
+          >
+            <div class="text-center flex items-center flex-col justify-center">
+              <h2
+                class="flex items-center text-4xl md:text-5xl xl:text-7xl mb-6 font-thin animate__animated animate__slideInDown"
+                data-wow-duration="5s"
+                data-wow-delay="3s"
+              >
+                <span class="font-thin text-beeYellow mx-2">Fa2Bee</span>
+                <span class="font-extrabold mx-2">Cleaning</span>
+              </h2>
+              <div
+                class="font-light text-sm md:text-lg animate__animated animate__slideInRight flex items-center mb-7"
+                data-wow-duration="4s"
+                data-wow-delay="3s"
+              >
+                <div class="w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
+                <p>Cleaning & Home Services in the Gambia</p>
                 <div class="w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
               </div>
               <a
@@ -229,7 +278,7 @@
           <div class="w-full lg:w-1/2 h-96">
             <a href="" class="h-full w-full">
               <img
-                src="img/laundry/riahbee_home1.webp"
+                src="img/banner/fa2bee-logo-banner.png"
                 class="w-full h-full object-cover"
               />
             </a>
@@ -262,7 +311,7 @@
           <div class="w-full lg:w-1/2 h-96">
             <a href="" class="h-full w-full">
               <img
-                src="img/fatou-b/vitamins.jpg"
+                src="img/fatou-b/fa2bee.png"
                 class="w-full h-full object-cover"
               />
             </a>
