banners changed and we banner added

--- a/src/index.html
+++ b/src/index.html
@@ -275,7 +275,7 @@
         class="owl-carousel owl-theme w-11/12 lg:1-10/12 xl:w-9/12 h-fit mx-auto rounded-2xl overflow-hidden bg-customBlack shadow-lg shadow-black/30"
       >
         <div class="item flex flex-col lg:flex-row lg:items-stretch">
-          <div class="w-full lg:w-1/2 h-96">
+          <div class="w-full lg:w-1/2 h-72 lg:h-96">
             <a href="" class="h-full w-full">
               <img
                 src="img/banner/fa2bee-logo-banner.png"
@@ -308,7 +308,7 @@
           </div>
         </div>
         <div class="item flex flex-col lg:flex-row lg:items-stretch">
-          <div class="w-full lg:w-1/2 h-96">
+          <div class="w-full lg:w-1/2 h-72 lg:h-96">
             <a href="" class="h-full w-full">
               <img
                 src="img/fatou-b/fa2bee.png"
