text sizes changed

--- a/src/index.html
+++ b/src/index.html
@@ -149,13 +149,13 @@
                 data-wow-duration="4s"
                 data-wow-delay="3s"
               >
-                <div class="w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
-                <p>We are a team of professionals</p>
-                <div class="w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
+                <div class="w-7 xl:w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
+                <p class="text-sm xl:text-lg">We are a team of professionals</p>
+                <div class="w-7 xl:w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
               </div>
               <a
                 href="#aboutus"
-                class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 mx-auto bg-beeYellow text-customBlack py-3 px-7 animate__animated animate__slideInUp"
+                class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 mx-auto bg-beeYellow text-customBlack py-3 px-7 text-sm animate__animated animate__slideInUp"
                 data-wow-duration="7s"
                 data-wow-delay="5s"
               >
@@ -194,13 +194,15 @@
                 data-wow-duration="4s"
                 data-wow-delay="3s"
               >
-                <div class="w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
-                <p>We do commercial laundry for all</p>
-                <div class="w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
+                <div class="w-7 xl:w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
+                <p class="text-sm xl:text-lg">
+                  We do commercial laundry for all
+                </p>
+                <div class="w-7 xl:w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
               </div>
               <a
                 href=""
-                class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 mx-auto bg-beeYellow text-customBlack py-3 px-7 animate__animated animate__slideInUp"
+                class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 mx-auto bg-beeYellow text-customBlack py-3 px-7 text-sm animate__animated animate__slideInUp"
                 data-wow-duration="7s"
                 data-wow-delay="5s"
               >
@@ -239,13 +241,15 @@
                 data-wow-duration="4s"
                 data-wow-delay="3s"
               >
-                <div class="w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
-                <p>Cleaning & Home Services in the Gambia</p>
-                <div class="w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
+                <div class="w-7 xl:w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
+                <p class="text-sm xl:text-lg">
+                  Cleaning & Home Services in the Gambia
+                </p>
+                <div class="w-7 xl:w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
               </div>
               <a
                 href=""
-                class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 mx-auto bg-beeYellow text-customBlack py-3 px-7 animate__animated animate__slideInUp"
+                class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 mx-auto bg-beeYellow text-customBlack py-3 px-7 text-sm animate__animated animate__slideInUp"
                 data-wow-duration="7s"
                 data-wow-delay="5s"
               >
@@ -299,7 +303,7 @@
 
             <a
               href=""
-              class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 bg-beeYellow text-customBlack py-3 px-7 animate__animated animate__slideInUp"
+              class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 bg-beeYellow text-customBlack py-3 px-7 text-sm animate__animated animate__slideInUp"
               data-wow-duration="7s"
               data-wow-delay="5s"
             >
@@ -332,7 +336,7 @@
 
             <a
               href=""
-              class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 bg-beeYellow text-customBlack py-3 px-7 animate__animated animate__slideInUp"
+              class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 bg-beeYellow text-customBlack py-3 px-7 text-sm animate__animated animate__slideInUp"
               data-wow-duration="7s"
               data-wow-delay="5s"
             >
