text sizes changed

--- a/src/index.html
+++ b/src/index.html
@@ -289,12 +289,12 @@
           </div>
           <div class="flex-1 p-5">
             <h2 class="text-2xl font-extrabold mb-2">Fa2Bee Inc.</h2>
-            <p class="font-light my-7">
+            <p class="font-light text-sm lg:text-lg my-5">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
               harum totam officiis dolor veritatis tempore nulla? Ipsam saepe,
               id esse officia at nesciunt architecto atque?
             </p>
-            <p class="font-light my-7">
+            <p class="font-light text-sm lg:text-lg my-5">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non enim
               eius aspernatur consectetur quisquam accusamus earum at
               consequuntur, sunt similique perferendis ut itaque explicabo
@@ -322,12 +322,12 @@
           </div>
           <div class="flex-1 p-5">
             <h2 class="text-2xl font-extrabold mb-2">Fatou B Ceesay</h2>
-            <p class="font-light my-7">
+            <p class="font-light text-sm lg:text-lg my-5">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
               harum totam officiis dolor veritatis tempore nulla? Ipsam saepe,
               id esse officia at nesciunt architecto atque?
             </p>
-            <p class="font-light my-7">
+            <p class="font-light text-sm lg:text-lg my-5">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non enim
               eius aspernatur consectetur quisquam accusamus earum at
               consequuntur, sunt similique perferendis ut itaque explicabo
