text sizes changed

--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
           />
           <!-- overlay -->
           <div
-            class="absolute top-0 left-0 w-full h-full bg-customDark/70 z-30 flex items-center justify-center p-10 text-white"
+            class="absolute top-0 left-0 w-full h-full bg-customDark/70 z-30 flex items-center justify-center p-5 lg:p-7 xl:p-10 text-white"
           >
             <div class="text-center flex items-center flex-col justify-center">
               <h2
@@ -150,7 +150,9 @@
                 data-wow-delay="3s"
               >
                 <div class="w-7 xl:w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
-                <p class="text-sm xl:text-lg">We are a team of professionals</p>
+                <p class="text-sm xl:text-lg truncate">
+                  We are a team of professionals
+                </p>
                 <div class="w-7 xl:w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
               </div>
               <a
@@ -178,7 +180,7 @@
           />
           <!-- overlay -->
           <div
-            class="absolute top-0 left-0 w-full h-full bg-customDark/70 z-30 flex items-center justify-center p-10 text-white"
+            class="absolute top-0 left-0 w-full h-full bg-customDark/70 z-30 flex items-center justify-center p-5 lg:p-7 xl:p-10 text-white"
           >
             <div class="text-center flex items-center flex-col justify-center">
               <h2
@@ -195,7 +197,7 @@
                 data-wow-delay="3s"
               >
                 <div class="w-7 xl:w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
-                <p class="text-sm xl:text-lg">
+                <p class="text-sm xl:text-lg truncate">
                   We do commercial laundry for all
                 </p>
                 <div class="w-7 xl:w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
@@ -225,7 +227,7 @@
           />
           <!-- overlay -->
           <div
-            class="absolute top-0 left-0 w-full h-full bg-customDark/70 z-30 flex items-center justify-center p-10 text-white"
+            class="absolute top-0 left-0 w-full h-full bg-customDark/70 z-30 flex items-center justify-center p-5 lg:p-7 xl:p-10 text-white"
           >
             <div class="text-center flex items-center flex-col justify-center">
               <h2
@@ -242,7 +244,7 @@
                 data-wow-delay="3s"
               >
                 <div class="w-7 xl:w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
-                <p class="text-sm xl:text-lg">
+                <p class="text-sm xl:text-lg truncate">
                   Cleaning & Home Services in the Gambia
                 </p>
                 <div class="w-7 xl:w-10 h-0.5 bg-beeYellow mx-2 lg:mx-4"></div>
