social links added

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
   <body>
     <!-- nav -->
     <nav
-      class="bg-customBlack/70 px-7 py-3 flex items-center justify-between sticky top-0 h-fit z-50"
+      class="bg-customBlack/70 px-7 py-3 flex items-center justify-between sticky top-0 h-fit nav"
     >
       <a href="">
         <img src="img/logo-white.png" alt="" class="h-11 object-scale-down" />
@@ -263,6 +263,38 @@
       </div>
     </div>
 
+    <!-- social media links -->
+    <div
+      class="relative -top-16 left-1/2 -translate-x-1/2 bg-customBlack w-fit p-4 px-7 z-50 flex items-center rounded-tr-3xl rounded-br-3xl rounded-bl-3xl shadow-md shadow-beeYellow/10"
+    >
+      <a
+        href=""
+        class="overflow-hidden rounded-tr-3xl rounded-br-3xl rounded-bl-3xl border border-black p-2 mx-3 bg-beeYellow hover:border-beeYellow hover:bg-customDark text-customDark hover:text-beeYellow transition-colors duration-500"
+      >
+        <i class="fa-brands fa-facebook fa-2x text-inherit"></i>
+      </a>
+
+      <a
+        href=""
+        class="overflow-hidden rounded-tr-3xl rounded-br-3xl rounded-bl-3xl border border-black p-2 mx-3 bg-beeYellow hover:border-beeYellow hover:bg-customDark text-customDark hover:text-beeYellow transition-colors duration-500"
+      >
+        <i class="fa-brands fa-instagram fa-2x text-inherit"></i>
+      </a>
+
+      <a
+        href=""
+        class="overflow-hidden rounded-tr-3xl rounded-br-3xl rounded-bl-3xl border border-black p-2 mx-3 bg-beeYellow hover:border-beeYellow hover:bg-customDark text-customDark hover:text-beeYellow transition-colors duration-500"
+      >
+        <i class="fa-brands fa-tiktok fa-2x text-inherit"></i>
+      </a>
+
+      <a
+        href=""
+        class="overflow-hidden rounded-tr-3xl rounded-br-3xl rounded-bl-3xl border border-black p-2 mx-3 bg-beeYellow hover:border-beeYellow hover:bg-customDark text-customDark hover:text-beeYellow transition-colors duration-500"
+      >
+        <i class="fa-brands fa-twitter fa-2x text-inherit"></i>
+      </a>
+    </div>
     <!-- about us -->
 
     <div class="p-5 py-14 xl:p-20" id="aboutus">
