--- a/src/index.html
+++ b/src/index.html
@@ -271,28 +271,28 @@
         href=""
         class="overflow-hidden rounded-tr-3xl rounded-br-3xl rounded-bl-3xl border border-black p-2 mx-3 bg-beeYellow hover:border-beeYellow hover:bg-customDark text-customDark hover:text-beeYellow transition-colors duration-500"
       >
-        <i class="fa-brands fa-facebook fa-2x text-inherit"></i>
+        <i class="fa-brands fa-facebook text-3xl text-inherit"></i>
       </a>
 
       <a
         href=""
         class="overflow-hidden rounded-tr-3xl rounded-br-3xl rounded-bl-3xl border border-black p-2 mx-3 bg-beeYellow hover:border-beeYellow hover:bg-customDark text-customDark hover:text-beeYellow transition-colors duration-500"
       >
-        <i class="fa-brands fa-instagram fa-2x text-inherit"></i>
+        <i class="fa-brands fa-instagram text-3xl text-inherit"></i>
       </a>
 
       <a
         href=""
         class="overflow-hidden rounded-tr-3xl rounded-br-3xl rounded-bl-3xl border border-black p-2 mx-3 bg-beeYellow hover:border-beeYellow hover:bg-customDark text-customDark hover:text-beeYellow transition-colors duration-500"
       >
-        <i class="fa-brands fa-tiktok fa-2x text-inherit"></i>
+        <i class="fa-brands fa-tiktok text-3xl text-inherit"></i>
       </a>
 
       <a
         href=""
         class="overflow-hidden rounded-tr-3xl rounded-br-3xl rounded-bl-3xl border border-black p-2 mx-3 bg-beeYellow hover:border-beeYellow hover:bg-customDark text-customDark hover:text-beeYellow transition-colors duration-500"
       >
-        <i class="fa-brands fa-twitter fa-2x text-inherit"></i>
+        <i class="fa-brands fa-twitter text-3xl text-inherit"></i>
       </a>
     </div>
     <!-- about us -->
