--- a/src/index.html
+++ b/src/index.html
@@ -327,7 +327,7 @@
         </div>
 
         <div
-          class="owl-carousel owl-theme w-11/12 lg:1-10/12 xl:w-9/12 h-fit mx-auto rounded-2xl overflow-hidden bg-customBlack shadow-lg shadow-black/30"
+          class="about-carousel owl-carousel owl-theme w-full lg:11/12 xl:w-9/12 h-fit mx-auto rounded-2xl overflow-hidden bg-customBlack shadow-lg shadow-black/30"
         >
           <div class="item flex flex-col lg:flex-row lg:items-stretch">
             <div class="w-full lg:w-1/2 h-64 md:h-72 lg:h-96">
@@ -501,6 +501,29 @@
           More Services
         </a>
       </section>
+
+      <!-- testimonial -->
+      <section
+        class="bg-[url('./img/testimonials/testimonials-bg.png')] bg-no-repeat bg-cover bg-fixed"
+        id="services"
+      >
+        <div class="p-5 py-14 xl:p-20 bg-customBlack/90">
+          <h1
+            class="text-center mb-7 text-beeYellow font-bold text-2xl md:text-3xl xl:text-4xl"
+          >
+            Happy Clients
+          </h1>
+          <div class="flex items-center justify-center mb-14">
+            <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+            <img src="img/bee-with-ring.png" class="mx-2" />
+            <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+          </div>
+
+          <div
+            class="testimonial-carousel owl-carousel owl-theme w-full lg:11/12 xl:w-10/12 h-fit mx-auto"
+          ></div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
@@ -509,6 +532,7 @@
       type="text/javascript"
       src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
     ></script>
+    <script src="js/testimonials.js"></script>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="owl-carousel/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
